src/TP2/BYACC/y.output
   0  $accept : program $end

   1  program : PROGRAM ID ';' declaracion cuerpo_programa
   2          | PROGRAM ID ';' cuerpo_programa
   3          | PROGRAM ';' declaracion cuerpo_programa
   4          | PROGRAM ';' cuerpo_programa
   5          | declaracion cuerpo_programa
   6          | cuerpo_programa

   7  cuerpo_programa : BEGIN sentencia_ejec END ';'

   8  bloque_sentencias : BEGIN sentencia_ejec END ';'
   9                    | miembro_sentencia_ejec

  10  tipo_id : UINT
  11          | DOUBLE
  12          | FUNC

  13  cuerpo_func : BEGIN sentencia_ejec RETURN retorno END
  14              | BEGIN sentencia_ejec RETURN retorno post_condicion END
  15              | BEGIN sentencia_ejec RETURN END
  16              | BEGIN sentencia_ejec RETURN post_condicion END
  17              | BEGIN sentencia_ejec RETURN ';' END
  18              | BEGIN sentencia_ejec RETURN ';' post_condicion END

  19  post_condicion : POST ':' condicion ',' CADENA ';'
  20                 | POST ':' condicion ',' ';'

  21  retorno : '(' expresion ')' ';'

  22  declaracion : tipo_id nombre_func params_func definicion_func ';'
  23              | tipo_id lista_variables ';'
  24              | tipo_id lista_variables ';' declaracion
  25              | tipo_id nombre_func params_func definicion_func ';' declaracion
  26              | lista_variables ';'
  27              | lista_variables ';' declaracion

  28  lista_variables : ID
  29                  | ID ',' lista_variables

  30  nombre_func : FUNC ID
  31              | FUNC

  32  params_func : '(' param ')'
  33              | '(' ')'

  34  param : tipo_id ID

  35  definicion_func : declaracion cuerpo_func
  36                  | cuerpo_func
  37                  |

  38  sentencia_ejec : miembro_sentencia_ejec sentencia_ejec
  39                 | miembro_sentencia_ejec

  40  miembro_sentencia_ejec : invocacion ';'
  41                         | asignacion ';'
  42                         | iteracion ';'
  43                         | seleccion ';'
  44                         | impresion ';'
  45                         | BREAK ';'
  46                         | seleccion miembro_sentencia_ejec
  47                         | invocacion miembro_sentencia_ejec
  48                         | asignacion miembro_sentencia_ejec
  49                         | iteracion miembro_sentencia_ejec
  50                         | impresion miembro_sentencia_ejec
  51                         | BREAK miembro_sentencia_ejec

  52  invocacion : ID '(' ')'
  53             | ID '(' ID ')'

  54  asignacion : ID ASIG expresion
  55             | ID ASIG error
  56             | ID
  57             | error ASIG expresion

  58  expresion : expresion '+' termino
  59            | expresion '-' termino
  60            | termino

  61  termino : termino '*' factor
  62          | termino '/' factor
  63          | factor

  64  factor : ID
  65         | CTE_UINT
  66         | CTE_DOUBLE
  67         | '-' factor
  68         | invocacion
  69         | ERR_CTE_FUERA_RANGO
  70         | ERR_FORMATO_CTE

  71  impresion : PRINT '(' CADENA ')'
  72            | PRINT '(' error ')'

  73  iteracion : REPEAT bloque_sentencias UNTIL condicion
  74            | REPEAT bloque_sentencias

  75  condicion : '(' expresion comparador expresion ')'
  76            | '(' expresion comparador expresion
  77            | '(' comparador expresion ')'
  78            | '(' expresion comparador ')'
  79            | '(' expresion operador_logico expresion ')'
  80            | '(' error ')'

  81  comparador : COMP_MAYOR_IGUAL
  82             | COMP_MENOR_IGUAL
  83             | '<'
  84             | '>'
  85             | COMP_IGUAL
  86             | COMP_DISTINTO

  87  operador_logico : AND
  88                  | OR

  89  seleccion : IF condicion THEN bloque_sentencias ENDIF
  90            | IF condicion THEN bloque_sentencias ELSE bloque_sentencias ENDIF
  91            | IF condicion THEN ELSE bloque_sentencias ENDIF
  92            | IF condicion THEN ELSE bloque_sentencias
  93            | IF condicion THEN ENDIF
  94            | IF condicion THEN bloque_sentencias ELSE bloque_sentencias
  95            | IF condicion THEN bloque_sentencias

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	program  goto 7
	declaracion  goto 8
	cuerpo_programa  goto 9
	tipo_id  goto 10
	lista_variables  goto 11


state 1
	program : PROGRAM . ID ';' declaracion cuerpo_programa  (1)
	program : PROGRAM . ID ';' cuerpo_programa  (2)
	program : PROGRAM . ';' declaracion cuerpo_programa  (3)
	program : PROGRAM . ';' cuerpo_programa  (4)

	ID  shift 12
	';'  shift 13
	.  error


state 2
	tipo_id : UINT .  (10)

	.  reduce 10


state 3
	tipo_id : DOUBLE .  (11)

	.  reduce 11


state 4
	cuerpo_programa : BEGIN . sentencia_ejec END ';'  (7)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	sentencia_ejec  goto 20
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 5
	lista_variables : ID .  (28)
	lista_variables : ID . ',' lista_variables  (29)

	','  shift 27
	';'  reduce 28


state 6
	tipo_id : FUNC .  (12)

	.  reduce 12


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : declaracion . cuerpo_programa  (5)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 28


state 9
	program : cuerpo_programa .  (6)

	.  reduce 6


state 10
	declaracion : tipo_id . nombre_func params_func definicion_func ';'  (22)
	declaracion : tipo_id . lista_variables ';'  (23)
	declaracion : tipo_id . lista_variables ';' declaracion  (24)
	declaracion : tipo_id . nombre_func params_func definicion_func ';' declaracion  (25)

	ID  shift 5
	FUNC  shift 29
	.  error

	nombre_func  goto 30
	lista_variables  goto 31


state 11
	declaracion : lista_variables . ';'  (26)
	declaracion : lista_variables . ';' declaracion  (27)

	';'  shift 32
	.  error


state 12
	program : PROGRAM ID . ';' declaracion cuerpo_programa  (1)
	program : PROGRAM ID . ';' cuerpo_programa  (2)

	';'  shift 33
	.  error


state 13
	program : PROGRAM ';' . declaracion cuerpo_programa  (3)
	program : PROGRAM ';' . cuerpo_programa  (4)

	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 34
	cuerpo_programa  goto 35
	tipo_id  goto 10
	lista_variables  goto 11


state 14
	asignacion : error . ASIG expresion  (57)

	ASIG  shift 36
	.  error


state 15
	invocacion : ID . '(' ')'  (52)
	invocacion : ID . '(' ID ')'  (53)
	asignacion : ID . ASIG expresion  (54)
	asignacion : ID . ASIG error  (55)
	asignacion : ID .  (56)

	ASIG  shift 37
	'('  shift 38
	error  reduce 56
	ID  reduce 56
	PRINT  reduce 56
	REPEAT  reduce 56
	IF  reduce 56
	BREAK  reduce 56
	';'  reduce 56


state 16
	impresion : PRINT . '(' CADENA ')'  (71)
	impresion : PRINT . '(' error ')'  (72)

	'('  shift 39
	.  error


state 17
	iteracion : REPEAT . bloque_sentencias UNTIL condicion  (73)
	iteracion : REPEAT . bloque_sentencias  (74)

	error  shift 14
	BEGIN  shift 40
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	bloque_sentencias  goto 41
	miembro_sentencia_ejec  goto 42
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 18
	seleccion : IF . condicion THEN bloque_sentencias ENDIF  (89)
	seleccion : IF . condicion THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (90)
	seleccion : IF . condicion THEN ELSE bloque_sentencias ENDIF  (91)
	seleccion : IF . condicion THEN ELSE bloque_sentencias  (92)
	seleccion : IF . condicion THEN ENDIF  (93)
	seleccion : IF . condicion THEN bloque_sentencias ELSE bloque_sentencias  (94)
	seleccion : IF . condicion THEN bloque_sentencias  (95)

	'('  shift 43
	.  error

	condicion  goto 44


state 19
	miembro_sentencia_ejec : BREAK . ';'  (45)
	miembro_sentencia_ejec : BREAK . miembro_sentencia_ejec  (51)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 45
	.  error

	miembro_sentencia_ejec  goto 46
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 20
	cuerpo_programa : BEGIN sentencia_ejec . END ';'  (7)

	END  shift 47
	.  error


state 21
	sentencia_ejec : miembro_sentencia_ejec . sentencia_ejec  (38)
	sentencia_ejec : miembro_sentencia_ejec .  (39)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	RETURN  reduce 39
	END  reduce 39

	sentencia_ejec  goto 48
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 22
	miembro_sentencia_ejec : invocacion . ';'  (40)
	miembro_sentencia_ejec : invocacion . miembro_sentencia_ejec  (47)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 49
	.  error

	miembro_sentencia_ejec  goto 50
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 23
	miembro_sentencia_ejec : asignacion . ';'  (41)
	miembro_sentencia_ejec : asignacion . miembro_sentencia_ejec  (48)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 51
	.  error

	miembro_sentencia_ejec  goto 52
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 24
	miembro_sentencia_ejec : iteracion . ';'  (42)
	miembro_sentencia_ejec : iteracion . miembro_sentencia_ejec  (49)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 53
	.  error

	miembro_sentencia_ejec  goto 54
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 25
	miembro_sentencia_ejec : seleccion . ';'  (43)
	miembro_sentencia_ejec : seleccion . miembro_sentencia_ejec  (46)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 55
	.  error

	miembro_sentencia_ejec  goto 56
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 26
	miembro_sentencia_ejec : impresion . ';'  (44)
	miembro_sentencia_ejec : impresion . miembro_sentencia_ejec  (50)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 57
	.  error

	miembro_sentencia_ejec  goto 58
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 27
	lista_variables : ID ',' . lista_variables  (29)

	ID  shift 5
	.  error

	lista_variables  goto 59


state 28
	program : declaracion cuerpo_programa .  (5)

	.  reduce 5


state 29
	nombre_func : FUNC . ID  (30)
	nombre_func : FUNC .  (31)

	ID  shift 60
	'('  reduce 31


state 30
	declaracion : tipo_id nombre_func . params_func definicion_func ';'  (22)
	declaracion : tipo_id nombre_func . params_func definicion_func ';' declaracion  (25)

	'('  shift 61
	.  error

	params_func  goto 62


state 31
	declaracion : tipo_id lista_variables . ';'  (23)
	declaracion : tipo_id lista_variables . ';' declaracion  (24)

	';'  shift 63
	.  error


state 32
	declaracion : lista_variables ';' .  (26)
	declaracion : lista_variables ';' . declaracion  (27)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 26

	declaracion  goto 64
	tipo_id  goto 10
	lista_variables  goto 11


state 33
	program : PROGRAM ID ';' . declaracion cuerpo_programa  (1)
	program : PROGRAM ID ';' . cuerpo_programa  (2)

	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 65
	cuerpo_programa  goto 66
	tipo_id  goto 10
	lista_variables  goto 11


state 34
	program : PROGRAM ';' declaracion . cuerpo_programa  (3)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 67


state 35
	program : PROGRAM ';' cuerpo_programa .  (4)

	.  reduce 4


state 36
	asignacion : error ASIG . expresion  (57)

	ID  shift 68
	CTE_UINT  shift 69
	CTE_DOUBLE  shift 70
	ERR_CTE_FUERA_RANGO  shift 71
	ERR_FORMATO_CTE  shift 72
	'-'  shift 73
	.  error

	expresion  goto 74
	invocacion  goto 75
	termino  goto 76
	factor  goto 77


state 37
	asignacion : ID ASIG . expresion  (54)
	asignacion : ID ASIG . error  (55)

	error  shift 78
	ID  shift 68
	CTE_UINT  shift 69
	CTE_DOUBLE  shift 70
	ERR_CTE_FUERA_RANGO  shift 71
	ERR_FORMATO_CTE  shift 72
	'-'  shift 73
	.  error

	expresion  goto 79
	invocacion  goto 75
	termino  goto 76
	factor  goto 77


state 38
	invocacion : ID '(' . ')'  (52)
	invocacion : ID '(' . ID ')'  (53)

	ID  shift 80
	')'  shift 81
	.  error


state 39
	impresion : PRINT '(' . CADENA ')'  (71)
	impresion : PRINT '(' . error ')'  (72)

	error  shift 82
	CADENA  shift 83
	.  error


state 40
	bloque_sentencias : BEGIN . sentencia_ejec END ';'  (8)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	sentencia_ejec  goto 84
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26


state 41
	iteracion : REPEAT bloque_sentencias . UNTIL condicion  (73)
	iteracion : REPEAT bloque_sentencias .  (74)

	UNTIL  shift 85
	error  reduce 74
	ID  reduce 74
	PRINT  reduce 74
	REPEAT  reduce 74
	IF  reduce 74
	BREAK  reduce 74
	';'  reduce 74


state 42
	bloque_sentencias : miembro_sentencia_ejec .  (9)

	.  reduce 9


state 43
	condicion : '(' . expresion comparador expresion ')'  (75)
	condicion : '(' . expresion comparador expresion  (76)
	condicion : '(' . comparador expresion ')'  (77)
	condicion : '(' . expresion comparador ')'  (78)
	condicion : '(' . expresion operador_logico expresion ')'  (79)
	condicion : '(' . error ')'  (80)

	error  shift 86
	ID  shift 68
	CTE_UINT  shift 69
	CTE_DOUBLE  shift 70
	COMP_MAYOR_IGUAL  shift 87
	COMP_MENOR_IGUAL  shift 88
	COMP_IGUAL  shift 89
	COMP_DISTINTO  shift 90
	ERR_CTE_FUERA_RANGO  shift 71
	ERR_FORMATO_CTE  shift 72
	'-'  shift 73
	'<'  shift 91
	'>'  shift 92
	.  error

	expresion  goto 93
	invocacion  goto 75
	termino  goto 76
	factor  goto 77
	comparador  goto 94


state 44
	seleccion : IF condicion . THEN bloque_sentencias ENDIF  (89)
	seleccion : IF condicion . THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (90)
	seleccion : IF condicion . THEN ELSE bloque_sentencias ENDIF  (91)
	seleccion : IF condicion . THEN ELSE bloque_sentencias  (92)
	seleccion : IF condicion . THEN ENDIF  (93)
	seleccion : IF condicion . THEN bloque_sentencias ELSE bloque_sentencias  (94)
	seleccion : IF condicion . THEN bloque_sentencias  (95)

	THEN  shift 95
	.  error


state 45
	miembro_sentencia_ejec : BREAK ';' .  (45)

	.  reduce 45


state 46
	miembro_sentencia_ejec : BREAK miembro_sentencia_ejec .  (51)

	.  reduce 51


state 47
	cuerpo_programa : BEGIN sentencia_ejec END . ';'  (7)

	';'  shift 96
	.  error

